# docs/swagger.json
@@ -17,6 +17,37 @@
     },
     "host": "127.0.0.1:8080",
     "paths": {
+        "/api/user/info": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "用户信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "用户信息",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/user/login": {
             "post": {
                 "description": "用户登录",
@@ -557,7 +588,7 @@
         },
         "/files/upload": {
             "post": {
-                "description": "上传文件指明路径",
+                "description": "上传文件指明路径 file 上传的文件 path存放的路径 cover 是否覆盖 用 postman的 body form-data",
                 "tags": [
                     "File"
                 ],
@@ -580,7 +611,7 @@
         },
         "/logs/login": {
             "post": {
-                "description": "服务器登陆日志",
+                "description": "面板登陆日志",
                 "consumes": [
                     "application/json"
                 ],
@@ -590,14 +621,14 @@
                 "tags": [
                     "logs"
                 ],
-                "summary": "服务器登陆日志",
+                "summary": "面板登陆日志",
                 "parameters": [
                     {
                         "description": "request",
-                        "name": "loginLog",
+                        "name": "page",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/login_log.SearchSSHLog"
+                            "$ref": "#/definitions/model.PageInfo"
                         }
                     }
                 ],
@@ -605,7 +636,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/login_log.SSHLog"
+                            "$ref": "#/definitions/model.LoginLog"
                         }
                     },
                     "400": {
@@ -1027,7 +1058,7 @@
                 }
             }
         },
-        "login_log.SSHHistory": {
+        "login_log_server.SSHHistory": {
             "type": "object",
             "properties": {
                 "address": {
@@ -1059,7 +1090,7 @@
                 }
             }
         },
-        "login_log.SSHLog": {
+        "login_log_server.SSHLog": {
             "type": "object",
             "properties": {
                 "failedCount": {
@@ -1068,7 +1099,7 @@
                 "logs": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/login_log.SSHHistory"
+                        "$ref": "#/definitions/login_log_server.SSHHistory"
                     }
                 },
                 "successfulCount": {
@@ -1079,7 +1110,7 @@
                 }
             }
         },
-        "login_log.SearchSSHLog": {
+        "login_log_server.SearchSSHLog": {
             "type": "object",
             "required": [
                 "Status",
@@ -1106,6 +1137,27 @@
                 }
             }
         },
+        "model.LoginLog": {
+            "type": "object",
+            "properties": {
+                "area": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "ip": {
+                    "type": "string"
+                },
+                "isLogin": {
+                    "description": "是否登陆成功",
+                    "type": "boolean"
+                },
+                "loginTime": {
+                    "type": "string"
+                }
+            }
+        },
         "model.PageInfo": {
             "type": "object",
             "required": [
@@ -1124,18 +1176,18 @@
         "model.RecoverReq": {
             "type": "object",
             "required": [
-                "RName",
                 "from",
-                "name"
+                "name",
+                "rName"
             ],
             "properties": {
-                "RName": {
-                    "type": "string"
-                },
                 "from": {
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "rName": {
                     "type": "string"
                 }
             }
